--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>首頁</title>
     <link rel="stylesheet" href="./offset/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
@@ -105,6 +105,65 @@
         </div>
       </div>
     </div>
+    <div class="index_news">
+      <div class="title">最新消息</div>
+      <div class="sub_title">任何疑問歡迎聯絡洽詢</div>
+      <div class="list">
+        <a href="#" class="item"
+          ><div class="time">2021-01-23</div>
+          物流零件專業製造新規格登場!</a
+        >
+        <a href="#" class="item"
+          ><div class="time">2021-01-23</div>
+          物流零件專業製造新規格登場!</a
+        >
+        <a href="#" class="item"
+          ><div class="time">2021-01-23</div>
+          物流零件專業製造新規格登場!</a
+        >
+      </div>
+    </div>
+    <footer>
+      <div class="contain">
+        <div class="con">
+          <div class="left">
+            <div class="foot_logo"><a href="#">金吉生活推車五金</a></div>
+            <dic class="social">
+              <a href="#" class="item"><i class="fab fa-facebook"></i></a>
+              <a href="#" class="item"
+                ><i class="fab fa-facebook-messenger"></i
+              ></a>
+              <a href="#" class="item"><i class="fab fa-line"></i></a>
+            </dic>
+            <div class="business_hours">
+              <label for="">營業時間：</label>
+              <div class="text">
+                周一至周五 8:30-19:30<br />
+                週六 8:30-18:00<br />
+                每周日公休
+              </div>
+            </div>
+          </div>
+          <div class="right">
+            <div class="info">
+              <div class="item">
+                <label for=""><i class="fas fa-phone-alt"></i></label>02-23880569
+              </div>
+              <div class="item">
+                <label for=""><i class="fas fa-fax"></i></label>02-23880591 (傳真前請先來電)
+              </div>
+              <div class="item">
+                <label for=""><i class="fas fa-map-marker-alt"></i></label>10847台北市萬華區環河南路一段302號
+              </div>
+              <div class="item">
+                <label for=""><i class="fas fa-envelope"></i></label>jin23880591@gmail.com
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
