--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
   </head>
   <body>
     <header>
-      <a class="logo">金吉生活推車五金</a>
-      <ul class="head_nav">
-        <li><a href="#">關於我們</a></li>
-        <li><a href="#">所有商品</a></li>
-        <li><a href="#">購物流程</a></li>
-        <li><a href="#">聯絡我們</a></li>
-      </ul>
-      <div class="search"><input type="text" placeholder="搜尋" /></div>
+      <div class="head_contain">
+        <a href="#" class="logo">金吉生活推車五金</a>
+        <ul class="head_nav">
+          <li><a href="#">關於我們</a></li>
+          <li><a href="#">所有商品</a></li>
+          <li><a href="#">購物流程</a></li>
+          <li><a href="#">聯絡我們</a></li>
+        </ul>
+        <div class="search"><input type="text" placeholder="搜尋" /></div>
+        <div class="search_btn"><i class="fas fa-search"></i></div>
+      </div>
     </header>
     <div
       class="index_top"
@@ -95,8 +98,12 @@
       <div class="text">
         <div class="con">
           <div class="title">
-            線上購買流程
-            <span class="arrow_right"><i class="fas fa-angle-right"></i></span>
+            <div class="title_inner">
+              線上購買流程
+              <span class="arrow_right"
+                ><i class="fas fa-angle-right"></i
+              ></span>
+            </div>
           </div>
           <div class="desc">
             我們提供線上型錄瀏覽及訂購服務<br />
@@ -127,7 +134,7 @@
       <div class="contain">
         <div class="con">
           <div class="left">
-            <div class="foot_logo"><a href="#">金吉生活推車五金</a></div>
+            <a href="#" class="foot_logo">金吉生活推車五金</a>
             <dic class="social">
               <a href="#" class="item"><i class="fab fa-facebook"></i></a>
               <a href="#" class="item"
@@ -147,19 +154,22 @@
           <div class="right">
             <div class="info">
               <div class="item">
-                <label for=""><i class="fas fa-phone-alt"></i></label>02-23880569
+                <label for=""><i class="fas fa-phone-alt"></i></label
+                >02-23880569
               </div>
               <div class="item">
-                <label for=""><i class="fas fa-fax"></i></label>02-23880591 (傳真前請先來電)
+                <label for=""><i class="fas fa-fax"></i></label>02-23880591
+                (傳真前請先來電)
               </div>
               <div class="item">
-                <label for=""><i class="fas fa-map-marker-alt"></i></label>10847台北市萬華區環河南路一段302號
+                <label for=""><i class="fas fa-map-marker-alt"></i></label
+                >10847台北市萬華區環河南路一段302號
               </div>
               <div class="item">
-                <label for=""><i class="fas fa-envelope"></i></label>jin23880591@gmail.com
+                <label for=""><i class="fas fa-envelope"></i></label
+                >jin23880591@gmail.com
               </div>
             </div>
-            
           </div>
         </div>
       </div>
