--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <header>
       <div class="head_contain">
+        <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="#" class="logo">金吉生活推車五金</a>
         <ul class="head_nav">
           <li><a href="#">關於我們</a></li>
@@ -18,7 +19,9 @@
           <li><a href="#">購物流程</a></li>
           <li><a href="#">聯絡我們</a></li>
         </ul>
-        <div class="search"><input type="text" placeholder="搜尋" /></div>
+        <form class="serch_block">
+          <div class="search"><input type="text" placeholder="搜尋" /></div>
+        </form>
         <div class="search_btn"><i class="fas fa-search"></i></div>
       </div>
     </header>
@@ -113,21 +116,23 @@
       </div>
     </div>
     <div class="index_news">
-      <div class="title">最新消息</div>
-      <div class="sub_title">任何疑問歡迎聯絡洽詢</div>
-      <div class="list">
-        <a href="#" class="item"
-          ><div class="time">2021-01-23</div>
-          物流零件專業製造新規格登場!</a
-        >
-        <a href="#" class="item"
-          ><div class="time">2021-01-23</div>
-          物流零件專業製造新規格登場!</a
-        >
-        <a href="#" class="item"
-          ><div class="time">2021-01-23</div>
-          物流零件專業製造新規格登場!</a
-        >
+      <div class="con">
+        <div class="title">最新消息</div>
+        <div class="sub_title">任何疑問歡迎聯絡洽詢</div>
+        <div class="list">
+          <a href="#" class="item"
+            ><div class="time">2021-01-23</div>
+            物流零件專業製造新規格登場!</a
+          >
+          <a href="#" class="item"
+            ><div class="time">2021-01-23</div>
+            物流零件專業製造新規格登場!</a
+          >
+          <a href="#" class="item"
+            ><div class="time">2021-01-23</div>
+            物流零件專業製造新規格登場!</a
+          >
+        </div>
       </div>
     </div>
     <footer>
