--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>首頁</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./offset/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
@@ -12,12 +18,12 @@
     <header>
       <div class="head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
-        <a href="#" class="logo">金吉生活推車五金</a>
+        <a href="./" class="logo">金吉生活推車五金</a>
         <ul class="head_nav">
-          <li><a href="#">關於我們</a></li>
-          <li><a href="#">所有商品</a></li>
-          <li><a href="#">購物流程</a></li>
-          <li><a href="#">聯絡我們</a></li>
+          <li><a href="./aboutus.html">關於我們</a></li>
+          <li><a href="./products.html">所有商品</a></li>
+          <li><a href="./float.html">購物流程</a></li>
+          <li><a href="./contact.html">聯絡我們</a></li>
         </ul>
         <form class="serch_block">
           <div class="search"><input type="text" placeholder="搜尋" /></div>
@@ -28,7 +34,7 @@
     <div
       class="index_top"
       style="
-        background-image: url(./images/scott-webb-BB0mMC8y0Pc-unsplash.jpg);
+        background-image: url(./images/index/scott-webb-BB0mMC8y0Pc-unsplash.jpg);
       "
     >
       <div class="title">在地經營，專業服務</div>
@@ -179,6 +185,11 @@
         </div>
       </div>
     </footer>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"
+      integrity="sha512-k2WPPrSgRFI6cTaHHhJdc8kAXaRM4JBFEDo1pPGGlYiOyv4vnA0Pp0G5XMYYxgAPmtmv/IIaQA6n5fLAyJaFMA=="
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
