--- a/float.html
+++ b/float.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>首頁</title>
+    <title>購物流程</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -33,45 +33,54 @@
     </header>
     <div
       class="page_top_banner"
-      style="background-image: url(./images/about/sol-tZw3fcjUIpM-unsplash.jpg)"
+      style="
+        background-image: url(./images/float/ryu-orn-kKd377Hzb6g-unsplash.jpg);
+      "
     ></div>
-    <div class="about_page">
-      <div class="top">
-        <div class="text">
-          <div class="title">關於我們</div>
-          <div class="desc">
-            中盈五金車輪行在地經營數十年，是許多勞工朋友、工廠的好
-            夥伴，只要您有任何推車相關的問題，我們都能給你最專業的
-            產品服務，我們也有快速的維修站只您的產品有任何損壞，
-            我們都能第一時間幫您服務,讓您的生財工具恢復如初，若有
-            需要我們服務的地方，歡迎來中盈找我們。
+    <div class="float_page">
+      <div class="contain">
+        <div class="title">線上購物流程</div>
+        <div class="list">
+          <div class="item">
+            <div class="image">
+              <img src="./images/float/item_1.png" alt="" />
+            </div>
+
+            <div class="name">1/選購商品</div>
+            <div class="desc">選擇商品後加<br />入購物車</div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="./images/float/item_2.png" alt="" />
+            </div>
+            <div class="name">2/訂單傳送</div>
+            <div class="desc">下單後系統彙整成<br />信件傳送給我們</div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="./images/float/item_3.png" alt="" />
+            </div>
+            <div class="name">3/取得聯絡</div>
+            <div class="desc">信件送達後我<br />們會聯絡您</div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="./images/float/item_4.png" alt="" />
+            </div>
+            <div class="name">4/選擇寄送方式</div>
+            <div class="desc">到店自取或郵寄</div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="./images/float/item_5.png" alt="" />
+            </div>
+            <div class="name">4/匯款後完成</div>
+            <div class="desc">訂單確認無誤<br />付款後完成訂購!</div>
           </div>
         </div>
-        <div class="item_list">
-          <div class="item">
-            <div class="pic"><img src="./images/about/member.png" alt=""></div>
-            專人諮詢
-          </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/cart.png" alt=""></div>
-            線上型錄
-          </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/wrench.png" alt=""></div>
-            維修服務
-          </div>
-        </div>
-      </div>
-      <div class="bottom">
-        <div class="pic"><img src="./images/about/theme-photos-Klby0nxseY8-unsplash.jpg" alt=""></div>
-        <div class="text">
-          <div class="title">主要服務項目</div>
-          <div class="desc">
-            手推車、工業用推車、拖板車、車、水泥車、菜籃車
-            車輪、腳輪、推車輪、工具車輪、橡膠輪胎、PU輪胎、
-            打氣輪、推車維修、車輪維修、彈性橡膠繩、鐵條、
-            鉤子、擺攤架、磅秤、電子秤、台秤、吊秤、陽傘。
-          </div>
+        <div class="contact_btn">
+          <div class="txt">- 任何疑問歡迎聯絡洽詢 -</div>
+          <a href="./contact.html">聯絡我們</a>
         </div>
       </div>
     </div>
