--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
         <div class="title">最新消息</div>
         <div class="sub_title">任何疑問歡迎聯絡洽詢</div>
         <div class="list">
-          <a href="#" class="item"
+          <a href="./news_info.html" class="item"
             ><div class="time">2021-01-23</div>
             物流零件專業製造新規格登場!</a
           >
-          <a href="#" class="item"
+          <a href="./news_info.html" class="item"
             ><div class="time">2021-01-23</div>
             物流零件專業製造新規格登場!</a
           >
-          <a href="#" class="item"
+          <a href="./news_info.html" class="item"
             ><div class="time">2021-01-23</div>
             物流零件專業製造新規格登場!</a
           >
