--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>首頁</title>
+    <title>產品內頁</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -116,15 +116,62 @@
                   <label>數量</label>
                   <div class="input">
                     <div class="minus"><i class="fas fa-minus"></i></div>
-                    <input type="number" value="1" disabled/>
+                    <input type="number" value="1" disabled />
                     <div class="plus"><i class="fas fa-plus"></i></div>
                   </div>
                 </div>
               </div>
               <div class="add_cart">
-                <a></a>
+                <a>加入購物車</a>
               </div>
             </div>
+          </div>
+          <div class="bottom">
+            <ul class="tabs">
+              <li class="active">商品詳情</li>
+              <li>運費說明</li>
+              <li>注意事項</li>
+            </ul>
+            <ul class="panels">
+              <li class="active">
+                <div class="editor">
+                  <div>
+                    <p>這是第一頁</p>
+                    <p>
+                      1.下標後約3-7個工作天出貨,例假日國定假日人員休息無法出貨.出貨日將會順延。
+                    </p>
+                    <p>2.下標後六天內未結帳將取消訂單。</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="editor">
+                  <div>
+                    <p>這是第二頁</p>
+                    <p>
+                      1.下標後約3-7個工作天出貨,例假日國定假日人員休息無法出貨.出貨日將會順延。
+                    </p>
+                    <p>2.下標後六天內未結帳將取消訂單。</p>
+                    <p>3.維護雙方權,拆箱時務必錄影存證清點物品數量,</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="editor">
+                  <div>
+                    <p>這是第三頁</p>
+                    <p>
+                      1.下標後約3-7個工作天出貨,例假日國定假日人員休息無法出貨.出貨日將會順延。
+                    </p>
+                    <p>2.下標後六天內未結帳將取消訂單。</p>
+                    <p>3.維護雙方權,拆箱時務必錄影存證清點物品數量,</p>
+                    <p>
+                      4.如有瑕疵或漏寄,請提供影片方便我們協助您,避免有爭議。
+                    </p>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
