--- a/float.html
+++ b/float.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/page.css" />
   </head>
   <body>
-    <header>
+    <header class="white">
       <div class="head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="./" class="logo">金吉生活推車五金</a>
