--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>首頁</title>
+    <title>購物車</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./offset/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="./css/page.css" />
+    <link rel="stylesheet" href="./css/cart.css" />
   </head>
   <body>
     <header>
@@ -33,44 +33,98 @@
     </header>
     <div
       class="page_top_banner"
-      style="background-image: url(./images/about/sol-tZw3fcjUIpM-unsplash.jpg)"
+      style="
+        background-image: url(./images/products/josue-isai-ramos-figueroa-Pj4je7OjrME-unsplash.jpg);
+      "
+      data-name="PRODUCTS"
     ></div>
-    <div class="about_page">
-      <div class="top">
-        <div class="text">
-          <div class="title">關於我們</div>
-          <div class="desc">
-            中盈五金車輪行在地經營數十年，是許多勞工朋友、工廠的好
-            夥伴，只要您有任何推車相關的問題，我們都能給你最專業的
-            產品服務，我們也有快速的維修站只您的產品有任何損壞，
-            我們都能第一時間幫您服務,讓您的生財工具恢復如初，若有
-            需要我們服務的地方，歡迎來中盈找我們。
+    <div class="contain">
+      <ul class="bread">
+        <li>
+          <a href="./"><i class="fas fa-home"></i>首頁</a>
+        </li>
+        <li><a href="#">所有商品</a></li>
+        <li>購物車</li>
+      </ul>
+    </div>
+    <div class="cart_page">
+      <div class="contain">
+        <div class="top">
+          <div class="table">
+            <div class="thead">
+              <div class="th pic"></div>
+              <div class="th name">商品名稱</div>
+              <div class="th price">單價</div>
+              <div class="th qty">數量</div>
+              <div class="th m_total">小計</div>
+              <div class="th operate">刪除</div>
+            </div>
+            <div class="tbody">
+              <div class="tr">
+                <div class="td pic">
+                  <img src="./images/cart/product_01.png" alt="" />
+                </div>
+                <div class="td name">500kg摺疊式手推車 (5时輪組)</div>
+                <div class="td price">$1200</div>
+                <div class="td qty">
+                  <select name="" id="">
+                    <option value="1">1</option>
+                    <option value="1">2</option>
+                    <option value="1">3</option>
+                    <option value="1">4</option>
+                    <option value="1">5</option>
+                  </select>
+                </div>
+                <div class="td m_total">$1200</div>
+                <div class="td operate"><i class="fas fa-times"></i></div>
+              </div>
+              <div class="tr pic">
+                <div class="td">
+                  <img src="./images/cart/product_01.png" alt="" />
+                </div>
+                <div class="td name">500kg摺疊式手推車 (5时輪組)</div>
+                <div class="td price">$1200</div>
+                <div class="td qty">
+                  <select name="" id="">
+                    <option value="1">1</option>
+                    <option value="1">2</option>
+                    <option value="1">3</option>
+                    <option value="1">4</option>
+                    <option value="1">5</option>
+                  </select>
+                </div>
+                <div class="td m_total">$1200</div>
+                <div class="td operate"><i class="fas fa-times"></i></div>
+              </div>
+            </div>
+            <div class="tfoot">
+              <div class="td">應付金額</div>
+              <div class="td operate">NT.1,520</div>
+            </div>
           </div>
         </div>
-        <div class="item_list">
-          <div class="item">
-            <div class="pic"><img src="./images/about/member.png" alt=""></div>
-            專人諮詢
+        <div class="bottom">
+          <div class="title">基本資料<span>(*為必填)</span></div>
+          <div class="form">
+            <div class="left">
+              <div class="input">
+                <label for="">姓名*</label><input type="text" />
+              </div>
+              <div class="input">
+                <label for="">電話*</label><input type="text" />
+              </div>
+              <div class="input">
+                <label for="">信箱*</label><input type="text" />
+              </div>
+            </div>
+            <div class="right">
+                <label for="">備註</label
+                ><textarea name="" id=""></textarea>
+            </div>
           </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/cart.png" alt=""></div>
-            線上型錄
-          </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/wrench.png" alt=""></div>
-            維修服務
-          </div>
-        </div>
-      </div>
-      <div class="bottom">
-        <div class="pic"><img src="./images/about/theme-photos-Klby0nxseY8-unsplash.jpg" alt=""></div>
-        <div class="text">
-          <div class="title">主要服務項目</div>
-          <div class="desc">
-            手推車、工業用推車、拖板車、車、水泥車、菜籃車
-            車輪、腳輪、推車輪、工具車輪、橡膠輪胎、PU輪胎、
-            打氣輪、推車維修、車輪維修、彈性橡膠繩、鐵條、
-            鉤子、擺攤架、磅秤、電子秤、台秤、吊秤、陽傘。
+          <div class="btns">
+            <div class="back">返回繼續購物</div>
+            <div class="send">$確認下單</div>
           </div>
         </div>
       </div>
