--- a/cart_finish.html
+++ b/cart_finish.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>首頁</title>
+    <title>結帳完成</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./offset/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="./css/page.css" />
+    <link rel="stylesheet" href="./css/cart.css" />
   </head>
   <body>
     <header>
@@ -33,44 +33,26 @@
     </header>
     <div
       class="page_top_banner"
-      style="background-image: url(./images/about/sol-tZw3fcjUIpM-unsplash.jpg)"
+      style="
+        background-image: url(./images/products/josue-isai-ramos-figueroa-Pj4je7OjrME-unsplash.jpg);
+      "
+      data-name="PRODUCTS"
     ></div>
-    <div class="about_page">
-      <div class="top">
-        <div class="text">
-          <div class="title">關於我們</div>
+    <div class="contain">
+      <ul class="bread">
+        <li>
+          <a href="./"><i class="fas fa-home"></i>首頁</a>
+        </li>
+        <li><a href="#">所有商品</a></li>
+        <li>購物車</li>
+      </ul>
+    </div>
+    <div class="cart_page">
+      <div class="contain">
+        <div class="result">
+          <div class="circle"><i class="fas fa-check-circle"></i></div>
           <div class="desc">
-            中盈五金車輪行在地經營數十年，是許多勞工朋友、工廠的好
-            夥伴，只要您有任何推車相關的問題，我們都能給你最專業的
-            產品服務，我們也有快速的維修站只您的產品有任何損壞，
-            我們都能第一時間幫您服務,讓您的生財工具恢復如初，若有
-            需要我們服務的地方，歡迎來中盈找我們。
-          </div>
-        </div>
-        <div class="item_list">
-          <div class="item">
-            <div class="pic"><img src="./images/about/member.png" alt=""></div>
-            專人諮詢
-          </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/cart.png" alt=""></div>
-            線上型錄
-          </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/wrench.png" alt=""></div>
-            維修服務
-          </div>
-        </div>
-      </div>
-      <div class="bottom">
-        <div class="pic"><img src="./images/about/theme-photos-Klby0nxseY8-unsplash.jpg" alt=""></div>
-        <div class="text">
-          <div class="title">主要服務項目</div>
-          <div class="desc">
-            手推車、工業用推車、拖板車、車、水泥車、菜籃車
-            車輪、腳輪、推車輪、工具車輪、橡膠輪胎、PU輪胎、
-            打氣輪、推車維修、車輪維修、彈性橡膠繩、鐵條、
-            鉤子、擺攤架、磅秤、電子秤、台秤、吊秤、陽傘。
+            下單完成，感謝您！<br />1-3天內將會有專人聯絡您確認訂單
           </div>
         </div>
       </div>
