--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>首頁</title>
+    <title>聯絡我們</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/page.css" />
   </head>
   <body>
-    <header>
+    <header class="white">
       <div class="head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="./" class="logo">金吉生活推車五金</a>
@@ -31,48 +31,33 @@
         <div class="search_btn"><i class="fas fa-search"></i></div>
       </div>
     </header>
-    <div
-      class="page_top_banner"
-      style="background-image: url(./images/about/sol-tZw3fcjUIpM-unsplash.jpg)"
-    ></div>
-    <div class="about_page">
+    <div class="contact_page">
       <div class="top">
-        <div class="text">
-          <div class="title">關於我們</div>
-          <div class="desc">
-            中盈五金車輪行在地經營數十年，是許多勞工朋友、工廠的好
-            夥伴，只要您有任何推車相關的問題，我們都能給你最專業的
-            產品服務，我們也有快速的維修站只您的產品有任何損壞，
-            我們都能第一時間幫您服務,讓您的生財工具恢復如初，若有
-            需要我們服務的地方，歡迎來中盈找我們。
+        <div class="contain">
+          <div class="title">更多產品及服務歡迎來電洽詢</div>
+          <div class="form">
+            <div class="name">聯絡我們</div>
+            <div class="inputs">
+              <div class="input half">
+                <label for="">姓名</label><input type="text" />
+              </div>
+              <div class="input half">
+                <label for="">電話</label><input type="text" />
+              </div>
+              <div class="input">
+                <label for="">信箱</label><input type="text" />
+              </div>
+              <div class="input">
+                <label for="">訊息</label><textarea name="" id=""></textarea>
+              </div>
+            </div>
+            <div class="send">送出</div>
           </div>
-        </div>
-        <div class="item_list">
-          <div class="item">
-            <div class="pic"><img src="./images/about/member.png" alt=""></div>
-            專人諮詢
-          </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/cart.png" alt=""></div>
-            線上型錄
-          </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/wrench.png" alt=""></div>
-            維修服務
-          </div>
+          <div class="bg_text">CONTACT US</div>
         </div>
       </div>
       <div class="bottom">
-        <div class="pic"><img src="./images/about/theme-photos-Klby0nxseY8-unsplash.jpg" alt=""></div>
-        <div class="text">
-          <div class="title">主要服務項目</div>
-          <div class="desc">
-            手推車、工業用推車、拖板車、車、水泥車、菜籃車
-            車輪、腳輪、推車輪、工具車輪、橡膠輪胎、PU輪胎、
-            打氣輪、推車維修、車輪維修、彈性橡膠繩、鐵條、
-            鉤子、擺攤架、磅秤、電子秤、台秤、吊秤、陽傘。
-          </div>
-        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.794548262382!2d121.49693531500648!3d25.04104548396913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a9a9dab2f277%3A0xb5a548ff3661bff5!2zMTA45Y-w5YyX5biC6JCs6I-v5Y2A55Kw5rKz5Y2X6Lev5LiA5q61MzAy6Jmf!5e0!3m2!1szh-TW!2stw!4v1625127675001!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
     </div>
     <footer>
