--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="head_contain">
+      <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="./" class="logo">金吉生活推車五金</a>
         <ul class="head_nav">
@@ -37,14 +37,16 @@
         background-image: url(./images/index/scott-webb-BB0mMC8y0Pc-unsplash.jpg);
       "
     >
-      <div class="title">在地經營，專業服務</div>
+      <div class="title">
+        <div class="container"><span>在地經營，專業服務</span></div>
+      </div>
       <div class="text">
         <span>金吉生活推車五金</span>
         <div class="arrow_down"><i class="fas fa-chevron-down"></i></div>
       </div>
     </div>
     <div class="index_about">
-      <div class="contain">
+      <div class="container">
         <div class="con">
           <div class="left">
             <ul class="list">
@@ -73,7 +75,7 @@
       </div>
     </div>
     <div class="index_products">
-      <div class="contain">
+      <div class="container">
         <div class="title"><span>商品介紹</span></div>
         <div class="list">
           <a href="#" class="item" data-name="腳輪系列"
@@ -122,7 +124,7 @@
       </div>
     </div>
     <div class="index_news">
-      <div class="con">
+      <div class="con container">
         <div class="title">最新消息</div>
         <div class="sub_title">任何疑問歡迎聯絡洽詢</div>
         <div class="list">
@@ -143,7 +145,7 @@
     </div>
     <footer>
       <div class="contain">
-        <div class="con">
+        <div class="container con">
           <div class="left">
             <a href="#" class="foot_logo">金吉生活推車五金</a>
             <dic class="social">
